--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ header{
     font-family: 'Architects Daughter', cursive;
     text-transform: uppercase;
     font-size: 30px;
-    color: #47484f
+    color: #47484f;
 }
 
 #title{
@@ -36,6 +36,7 @@ header{
     height: auto;
     margin: auto;
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 img{
@@ -102,29 +103,48 @@ li{
 
 #button-links {
     display: flex;
-    background-color: #71b6bf;
     justify-content: space-evenly;
+    height: 100px;
 }
 
 
 .links{
+    display: flex;
     list-style: none;
-    border: solid black;
+    
     width: 100px;
     height: 50px;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    transition: transform 0.3s;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
 }
-
-    
-
 
 .links a{
-    text-decoration: none;
-    
+    text-decoration: none;    
 }
 
+#wikipedia-button {
+    background-color: #f7f7f7;
+    color: #292929;
+}
 
+#wikipedia-link:visited {
+    color: #292929;
+}
 
+#spotify-button{
+    background-color: #191414;
+    color: #00d95a;
+}
 
+#spotify-link:visited {
+    color: #00d95a;
+}
 
+.links:hover {
+    transform: scale(1.1, 1.1);
+    text-decoration: underline;
+}
 
